k8s/apps/selfhosted/searxng/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: searxng
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: searxng
      app.kubernetes.io/instance: searxng
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: networking
            gateway.networking.k8s.io/gateway-name: envoy-internal
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: ai
            app.kubernetes.io/name: open-webui
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
